<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".MainActivity"
    android:background="#fffbc454">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageViewLogo"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/logo"
        android:contentDescription="@string/imageViewLogoContentDescriptionText" />

    <TextView
        android:id="@+id/textViewMainDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewMainDescText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff2e4171" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textViewLabelEditTextText"
            android:id="@+id/textViewLabelEditText"
            android:layout_gravity="center_vertical"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:textColor="#ff2e4171" />

        <EditText
            android:id="@+id/editTextInputValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:inputType="none"
            android:minWidth="100dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnSpan="1"
            android:textColor="#ff2e4171"
            android:maxLines="1" />

        <Spinner
            android:id="@+id/spinnerNumberSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/numbersystem_array"
            android:prompt="@string/numbersystem_prompt"
            android:spinnerMode="dropdown"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_columnSpan="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textViewLabelSpinnerTargetSystemText"
            android:id="@+id/textViewLabelSpinnerTargetSystem"
            android:layout_gravity="center_vertical"
            android:layout_column="0"
            android:layout_row="1"
            android:textColor="#ff2e4171" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerTargetSystem"
            android:entries="@array/numbersystem_array"
            android:prompt="@string/numbersystem_prompt"
            android:spinnerMode="dropdown"
            android:layout_gravity="center_vertical"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnSpan="2" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewOutputValueText"
        android:id="@+id/textViewOutputValue"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/default_margin"
        android:textColor="#ff2e4171"
        android:clickable="true" />

</LinearLayout>

